# vpuppr

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  build.py  build.sh  libvpuppr.gdextension.uid  project.godot  setup.sh
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
addons/Godot-MToon-Shader/: mtoon_outline_cutout.gdshader.uid  mtoon_outline_trans.gdshader.uid  mtoon_trans.gdshader.uid  mtoon_trans_zwrite_cull_off.gdshader.uid
addons/renik/: renik_helper.gd.uid  renik_placement.gd.uid
addons/vrm/: importer_mesh_attributes.gd.uid  vrm_collider_group.gd.uid  vrm_spring_bone_logic.gd.uid  vrm_utils.gd.uid
assets/: VpupprAppIcon.png.import  VpupprDuck.png.import  VpupprLogo.png.import  VpupprSubLogo.png.import  icon.svg.import
entities/: fly_camera.gd.uid  runner_camera_3d.gd.uid
entities/puppets/: glb_puppet.gd.uid  vrm_puppet.gd.uid
godot/: build.sh  libvpuppr.gdextension  libvpuppr.gdextension.uid  setup.sh
godot/assets/: Favorite.svg.import  SplashIcon.png.import  VpupprDucksBG.png.import
godot/docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDELINES.md  TRACKERS.md
godot/model/: common_options.gd.uid  metadata.gd.uid  puppet3d_data.gd  puppet3d_data.gd.uid  puppet_data.gd  puppet_data.gd.uid  runner_data.gd
godot/screens/: context.gd  context.gd.uid  popup_window.gd  splash.gd  splash.gd.uid
godot/trackers/: i_facial_mocap.gd  i_facial_mocap.gd.uid  media_pipe.gd  meow_face.gd  meow_face.gd.uid  vtube_studio.gd
godot/utils/: app_manager.gd  app_manager.gd.uid
model/: gui_message.gd.uid  ik_targets3d.gd.uid  puppet2d_data.gd.uid  runner_data.gd.uid  vrm_puppet_data.gd.uid
model/meow_face/: meow_face_options.gd.uid
model/vtube_studio/: vtube_studio_data.gd.uid  (+1 more)
rust/: Cargo.toml  README.md  libvpuppr.gdextension
rust/src/: cli.rs  lib.rs  logger.rs  model.rs  puppets.rs
rust/src/puppets/: glb_puppet.rs  vrm_puppet.rs
screens/: popup_window.gd.uid  splash.tscn
trackers/: abstract_tracker.gd.uid  media_pipe.gd.uid  vtube_studio.gd.uid
utils/: environment_util.gd.uid
(+99 files in other folders)
