[package]
name = "libvpuppr"
version = "0.2.0"
edition = "2024"
authors = ["Tim Yuen<timothy.yuen22@gmail.com>", "Matti Lahtinen<menithal@norteclabs.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
argh = "0.1.12"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
    "time",
    "serde",
] }
#godot = { git = "https://github.com/virtual-puppet-project/gdext", branch = "vpuppr", features = [
#    "serde",
#] } # this was the legacy version of gdext which tim had modified, but was denied upstream for godot-rust/gdext#456. 
# Going to instead try to just use the upstream as tim used alot of time to try to maintain the custom gdext. This is also now renamed to godot-rust as we migrate to godot 4.5

godot = { git = "https://github.com/godot-rust/gdext",  branch = "master", features = [ "serde"]} #should probably stick to a specific version
#godot-logger = "1.1.0"
log = "0.4.20"
once_cell = "1.18"
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tot = "0.2"
youlog = "0.1.1"
