[package]
name = "vpuppr" # lib comes from just using cdylib infront!
version = "0.2.0"
edition = "2024"
authors = ["Tim Yuen<timothy.yuen22@gmail.com>", "Matti Lahtinen<menithal@norteclabs.com"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext",   version="0.4.0", features = [ "serde", "register-docs" ] }

argh = "0.1.13"
chrono = { version = "^0.4.42", default-features = false, features = [
    "clock",
    "std",
    "serde",
] }
#godot-logger = "1.1.0"
log = "0.4.28"
once_cell = "1.21.3"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tot = "0.2"
youlog = "0.1.2"
